urls die niet goed zijn rood kleuren

--- a/KraanDevExpress.Module.Win/KraanDevExpress.Module.Win.csproj
+++ b/KraanDevExpress.Module.Win/KraanDevExpress.Module.Win.csproj
@@ -140,6 +140,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
+    <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="WinModule.resx">
+      <DependentUpon>WinModule.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\ExpressAppLogo.png" />
