--- a/KraanDevExpress.Module/KraanDevExpress.Module.csproj
+++ b/KraanDevExpress.Module/KraanDevExpress.Module.csproj
@@ -92,6 +92,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
