result test klant verwijderen met vraag naar andere tests

--- a/KraanDevExpress.Module/KraanDevExpress.Module.csproj
+++ b/KraanDevExpress.Module/KraanDevExpress.Module.csproj
@@ -191,6 +191,9 @@
     <EmbeddedResource Include="Controllers\ResultTestEenUrlController.resx">
       <DependentUpon>ResultTestEenUrlController.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\ResultTestKlantController.resx">
+      <DependentUpon>ResultTestKlantController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controllers\UrlController.resx">
       <DependentUpon>UrlController.cs</DependentUpon>
     </EmbeddedResource>
