--- a/KraanDevExpress.Module.Win/KraanDevExpress.Module.Win.csproj
+++ b/KraanDevExpress.Module.Win/KraanDevExpress.Module.Win.csproj
@@ -130,6 +130,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\KlantController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\KlantController.Designer.cs">
+      <DependentUpon>KlantController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\ResultTestKlantController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\ResultTestKlantController.Designer.cs">
+      <DependentUpon>ResultTestKlantController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinModule.cs">
       <SubType>Component</SubType>
@@ -139,6 +151,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controllers\KlantController.resx">
+      <DependentUpon>KlantController.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\ResultTestKlantController.resx">
+      <DependentUpon>ResultTestKlantController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="WinModule.resx">
