--- a/KraanDevExpress.Module.Web/KraanDevExpress.Module.Web.csproj
+++ b/KraanDevExpress.Module.Web/KraanDevExpress.Module.Web.csproj
@@ -90,11 +90,24 @@
     <Reference Include="System.Data">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\KlantController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\KlantController.Designer.cs">
+      <DependentUpon>KlantController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\ResultTestKlantController.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controllers\ResultTestKlantController.Designer.cs">
+      <DependentUpon>ResultTestKlantController.cs</DependentUpon>
+    </Compile>
     <Compile Include="WebModule.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -104,7 +117,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controllers\KlantController.resx">
+      <DependentUpon>KlantController.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\ResultTestKlantController.resx">
+      <DependentUpon>ResultTestKlantController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
+    <EmbeddedResource Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Controllers\ReadMe.txt" />
